# data-matching

./: .gitignore  Dockerfile  README.md  help_clean_repo.ipynb  pyproject.toml
.github/workflows/: lint.yml
src/data_matching/: main.py  main_main.py
src/data_matching/EmbDI/: aliased_randomizer.py  data_preprocessing.py  edgelist.py  embeddings.py  embeddings_quality.py  entity_resolution.py  graph.py  graph_backup.py  logger.py  schema_matching.py  sentence_generation_strategies.py  testing_functions.py  utils.py
src/data_matching/data_matching/: functions.py  main_function.py
src/data_matching/utils_function/: metrics.py  metrics_data_matching.py  metrics_embedding_stability.py
tests/: test_my_app.py
tests/input_data/: Titanic.csv  Titanic_2.csv  amazon_google-tableA_small.csv  amazon_google-tableB_small.csv  beer-tableA_small.csv  beer-tableB_small.csv  dblp_acm-tableA_small.csv  dblp_acm-tableB_100.csv  dblp_acm-tableB_100_small.csv  dblp_acm-tableB_small.csv  dblp_scholar-tableA.csv  dblp_scholar-tableA_small.csv  dblp_scholar-tableB_small.csv  fodors_zagats-tableA_small.csv  fodors_zagats-tableB_small.csv  imdb_movielens-tableA.csv  imdb_movielens-tableA_small.csv  imdb_movielens-tableB_small.csv  itunes_amazon-tableA.csv  itunes_amazon-tableA_small.csv  itunes_amazon-tableB_small.csv  miller_source_5.csv  miller_source_5000.csv  miller_source_5000_small.csv  miller_source_5_small.csv  miller_source_small.csv  miller_target_small.csv
tests/output_data/: amazon_google-tableB_small.txt  beer-tableA_small.txt  dblp_acm-tableA_small.txt  dblp_acm-tableB_100_small.txt  imdb_movielens-tableA_small.txt  miller_source_5_small.txt
tests/output_data/edglistes/: Titanic_2.txt  amazon_google-tableA_small.txt  beer-tableB_small.txt  dblp_acm-tableB_small.txt  dblp_scholar-tableA_small.txt  fodors_zagats-tableA_small.txt  fodors_zagats-tableB_small.txt  itunes_amazon-tableA_small.txt
tests/output_data/embbedings/: Titanic_2_5000_deepwalk.emb  (+1 more)
(+1958 files in other folders)
